tests/snapshots/test_runner__tests__compiler__typecheck__mutually_recursive_function_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo
  : | Integer => Integer
  = |.bar()  # Error: Expected Integer, got String

let bar
  : | Integer => String
  = |.foo()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/mutually_recursive_function_1.kk:3:6
  │
3 │   = |.bar()  # Error: Expected Integer, got String
  │      ^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Integer     | + String    |
    +---------------+-------------+
